// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DoxenCodeSwapper > Renders with all props 1`] = `
<div
  class="doxen-code-swapper"
  data-applied-style-tokens="codeSwapper"
  data-style-tokens="codeSwapper"
>
  <div
    class="doxen-tabs-header"
    data-applied-style-tokens="tabsHeader"
    data-style-tokens="tabsHeader"
  >
    <code
      class="doxen-code-swapper-file-name"
      data-applied-style-tokens="codeSwapperFileName"
      data-style-tokens="codeSwapperFileName"
    >
      file.vue
    </code>
    <div
      class="doxen-tabs-button-container"
      data-applied-style-tokens="tabsButtonContainer"
      data-style-tokens="tabsButtonContainer"
    >
      <button
        aria-pressed="true"
        class="
          doxen-tab-button
          doxen-tab-button-selected
        "
        data-applied-style-tokens="tabButton tabButtonSelected"
        data-style-tokens="tabButton tabButtonNotSelected tabButtonSelected"
      >
        html
      </button>
      <button
        aria-pressed="false"
        class="
          doxen-tab-button
          doxen-tab-button-not-selected
        "
        data-applied-style-tokens="tabButton tabButtonNotSelected"
        data-style-tokens="tabButton tabButtonNotSelected tabButtonSelected"
      >
        js
      </button>
      <button
        aria-pressed="false"
        class="
          doxen-tab-button
          doxen-tab-button-not-selected
        "
        data-applied-style-tokens="tabButton tabButtonNotSelected"
        data-style-tokens="tabButton tabButtonNotSelected tabButtonSelected"
      >
        object
      </button>
    </div>
  </div>
  <div
    aria-label="Code example"
    class="doxen-code-box-container"
    data-applied-style-tokens="codeBoxContainer"
    data-style-tokens="codeBoxContainer"
    role="textbox"
    tabindex="0"
  >
    <pre
      class="doxen-code-box"
      data-applied-style-tokens="codeBox"
      data-style-tokens="codeBox"
    ><code
      class="
        hljs
        xml
      "
      tabindex="0"
    ><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">attribute</span>=<span class="hljs-string">"value"</span>&gt;</span>
  Text
<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span></code></pre>
    <!-- v-if -->
  </div>
  <div
    aria-label="Code example"
    class="doxen-code-box-container"
    data-applied-style-tokens="codeBoxContainer"
    data-style-tokens="codeBoxContainer"
    role="textbox"
    style="display: none;"
    tabindex="0"
  >
    <pre
      class="doxen-code-box"
      data-applied-style-tokens="codeBox"
      data-style-tokens="codeBox"
    ><code
      class="
        hljs
        javascript
      "
      tabindex="0"
    ><span class="hljs-keyword">const</span> value = <span class="hljs-number">4</span>;
<span class="
      hljs-variable
      language_
    ">console</span>.<span class="
      function_
      hljs-title
    ">log</span>({
  <span class="hljs-attr">key</span>: value
});</code></pre>
    <!-- v-if -->
  </div>
  <div
    aria-label="Code example"
    class="doxen-code-box-container"
    data-applied-style-tokens="codeBoxContainer"
    data-style-tokens="codeBoxContainer"
    role="textbox"
    style="display: none;"
    tabindex="0"
  >
    <pre
      class="doxen-code-box"
      data-applied-style-tokens="codeBox"
      data-style-tokens="codeBox"
    ><code
      class="
        hljs
        javascript
      "
      tabindex="0"
    >{
  <span class="hljs-attr">key</span>: <span class="hljs-string">'value'</span>,
  <span class="hljs-attr">fn</span>: <span class="hljs-function">() =&gt;</span> { <span class="hljs-keyword">return</span> <span class="hljs-number">2</span>; }
}</code></pre>
    <!-- v-if -->
  </div>
</div>
`;

exports[`DoxenCodeSwapper > Renders with just required props 1`] = `
<div
  class=""
  data-applied-style-tokens="codeSwapper"
  data-style-tokens="codeSwapper"
>
  <div
    class=""
    data-applied-style-tokens="tabsHeader"
    data-style-tokens="tabsHeader"
  >
    <div
      class=""
      data-applied-style-tokens="tabsButtonContainer"
      data-style-tokens="tabsButtonContainer"
    >
      <button
        aria-pressed="true"
        class=""
        data-applied-style-tokens="tabButton tabButtonSelected"
        data-style-tokens="tabButton tabButtonNotSelected tabButtonSelected"
      >
        html
      </button>
      <button
        aria-pressed="false"
        class=""
        data-applied-style-tokens="tabButton tabButtonNotSelected"
        data-style-tokens="tabButton tabButtonNotSelected tabButtonSelected"
      >
        js
      </button>
      <button
        aria-pressed="false"
        class=""
        data-applied-style-tokens="tabButton tabButtonNotSelected"
        data-style-tokens="tabButton tabButtonNotSelected tabButtonSelected"
      >
        object
      </button>
    </div>
  </div>
  <div
    aria-label="Code example"
    class=""
    data-applied-style-tokens="codeBoxContainer"
    data-style-tokens="codeBoxContainer"
    role="textbox"
    tabindex="0"
    title="Click to copy"
  >
    <pre
      class=""
      data-applied-style-tokens="codeBox"
      data-style-tokens="codeBox"
    ><code
      class="
        hljs
        xml
      "
      tabindex="0"
    ><span class="hljs-tag">&lt;<span class="hljs-name">div</span> <span class="hljs-attr">attribute</span>=<span class="hljs-string">"value"</span>&gt;</span>
  Text
<span class="hljs-tag">&lt;/<span class="hljs-name">div</span>&gt;</span></code></pre>
    <!-- v-if -->
  </div>
  <div
    aria-label="Code example"
    class=""
    data-applied-style-tokens="codeBoxContainer"
    data-style-tokens="codeBoxContainer"
    role="textbox"
    style="display: none;"
    tabindex="0"
    title="Click to copy"
  >
    <pre
      class=""
      data-applied-style-tokens="codeBox"
      data-style-tokens="codeBox"
    ><code
      class="
        hljs
        javascript
      "
      tabindex="0"
    ><span class="hljs-keyword">const</span> value = <span class="hljs-number">4</span>;
<span class="
      hljs-variable
      language_
    ">console</span>.<span class="
      function_
      hljs-title
    ">log</span>({
  <span class="hljs-attr">key</span>: value
});</code></pre>
    <!-- v-if -->
  </div>
  <div
    aria-label="Code example"
    class=""
    data-applied-style-tokens="codeBoxContainer"
    data-style-tokens="codeBoxContainer"
    role="textbox"
    style="display: none;"
    tabindex="0"
    title="Click to copy"
  >
    <pre
      class=""
      data-applied-style-tokens="codeBox"
      data-style-tokens="codeBox"
    ><code
      class="
        hljs
        javascript
      "
      tabindex="0"
    >{
  <span class="hljs-attr">key</span>: <span class="hljs-string">'value'</span>,
  <span class="hljs-attr">fn</span>: <span class="hljs-function">() =&gt;</span> { <span class="hljs-keyword">return</span> <span class="hljs-number">2</span>; }
}</code></pre>
    <!-- v-if -->
  </div>
</div>
`;
